@@ -29,9 +29,12 @@ s/[=[].*/=1/p
 res=`genaut $opts --stats="--%F=%L"`
 test "$opts" = "$res"
 
-genaut --ks-nca=..3 --l-nba=..3 --l-dsa=..3 --m-nba=..3 \
+genaut --iar-dsa-2n=1..3 --ks-nca=..3 --l-nba=..3 --l-dsa=..3 --m-nba=..3 \
        --stats=%s,%e,%t,%c,%g >out
 cat >expected <<EOF
+2,4,4,1,(Fin(0) | Inf(1)) & (Fin(2) | Inf(3))
+4,8,8,1,(Fin(0) | Inf(1)) & (Fin(2) | Inf(3))
+6,12,12,1,(Fin(0) | Inf(1)) & (Fin(2) | Inf(3))
 3,7,16,1,Fin(0)
 5,14,32,1,Fin(0)
 7,20,48,1,Fin(0)
